--- a/public/css/src.css
+++ b/public/css/src.css
@@ -21,6 +21,7 @@
     --clr-bg-sidenav-hover: #a1aac7;
     --clr-bg-sidenav-header: var(--clr-bg-sidenav);
     --clr-navitem-active: #f8fafc;
+    --clr-main: #f8fafc;
 
     --font-content: 16px;
     --font-title: 22px;
